--- a/stats.html
+++ b/stats.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body style="overflow: hidden; font-face: 'Open Sans';">
+<body style="overflow: hidden;">
 
 
 <div id="container" style="width:100%; height:50%; position: fixed; top: 0;"></div>
