--- a/stats.html
+++ b/stats.html
@@ -6,16 +6,16 @@
 <script src="http://code.highcharts.com/stock/highstock.js"></script>
 <script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
 
-<script src="https://cdn.rawgit.com/ibizamyholidays/ibizamyholidays/master/constructor.js"></script>
-<script src="https://cdn.rawgit.com/ibizamyholidays/ibizamyholidays/master/statdata.js"></script>
+<script src="https://rawgit.com/ibizamyholidays/ibizamyholidays/master/constructor.js"></script>
+<script src="https://rawgit.com/ibizamyholidays/ibizamyholidays/master/statdata.js"></script>
 
-<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ibizamyholidays/ibizamyholidays/master/styles.css" />
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/ibizamyholidays/ibizamyholidays/master/styles.css" />
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css" />
 
 
 </head>
 
-<body style="overflow: hidden;">
+<body style="overflow: hidden;font-family: 'Segoe UI';">
 
 
 <div id="container" style="width:100%; height:50%; position: fixed; top: 0;"></div>
